--- a/notebooks/data/data-cleaning.ipynb
+++ b/notebooks/data/data-cleaning.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "id": "16b2b488",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_events = pd.read_csv('../../data/raw/train_events.csv')"
+    "train_events = pd.read_csv('../../data/raw/events.csv')"
    ]
   },
   {
@@ -50,7 +50,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(14508, 5)\n"
+      "(14508, 6)\n"
      ]
     }
    ],
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "be860987",
    "metadata": {},
    "outputs": [],
@@ -77,7 +77,7 @@
     "plot_series = False\n",
     "\n",
     "def remove_duplicates(series_id):\n",
-    "    series_to_clean = pd.read_parquet('../../data/raw/train_series.parquet', filters=[('series_id','=',series_id)])\n",
+    "    series_to_clean = pd.read_parquet('../../data/raw/series.parquet', filters=[('series_id','=',series_id)])\n",
     "\n",
     "    multiplicator = 0\n",
     "\n",
@@ -123,10 +123,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "id": "9cbbbc56",
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
@@ -410,8 +410,8 @@
       "Step 275 of 277\n",
       "Step 276 of 277\n",
       "Step 277 of 277\n",
-      "CPU times: total: 2h 32min 34s\n",
-      "Wall time: 34min 12s\n"
+      "CPU times: total: 1min 24s\n",
+      "Wall time: 2min 7s\n"
      ]
     }
    ],
@@ -434,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "id": "28de6b7b",
    "metadata": {},
    "outputs": [
@@ -442,7 +442,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(109178100, 5)\n"
+      "(109178100, 6)\n"
      ]
     }
    ],
@@ -460,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "id": "a74dd8eb",
    "metadata": {},
    "outputs": [
@@ -469,7 +469,7 @@
      "output_type": "stream",
      "text": [
       "Serien ohne Events: \n",
-      " ['2fc653ca75c7', '0f9e60a8e56d', 'a3e59c2ce3f6', 'c5d08fc3e040', '89c7daa72eee', 'c7b1283bb7eb', 'e11b9d69f856', '390b487231ce']\n"
+      " ['390b487231ce', 'e11b9d69f856', '89c7daa72eee', '2fc653ca75c7', 'a3e59c2ce3f6', '0f9e60a8e56d', 'c7b1283bb7eb', 'c5d08fc3e040']\n"
      ]
     }
    ],
@@ -485,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "id": "25d728a6",
    "metadata": {},
    "outputs": [],
@@ -504,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "id": "ad02737e",
    "metadata": {},
    "outputs": [
@@ -512,8 +512,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(107115120, 5)\n",
-      "(14154, 5)\n"
+      "(107115120, 6)\n",
+      "(14154, 6)\n"
      ]
     }
    ],
@@ -524,21 +524,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "id": "e16255d9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "cleaned_train_series.to_parquet('../../data/cleaned/train_series.parquet')\n",
-    "cleaned_train_events.to_csv('../../data/cleaned/train_events.csv', index=False)"
+    "cleaned_train_series.to_parquet('../../data/cleaned/series.parquet')\n",
+    "cleaned_train_events.to_csv('../../data/cleaned/events.csv', index=False)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "AICH",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "aich"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -550,7 +550,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
