--- a/notebooks/data/data-merge.ipynb
+++ b/notebooks/data/data-merge.ipynb
@@ -36,7 +36,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_events = pd.read_csv('../../data/cleaned/train_events.csv')"
+    "train_events = pd.read_csv('../../data/cleaned/events.csv')"
    ]
   },
   {
@@ -55,7 +55,7 @@
    "outputs": [],
    "source": [
     "def get_merged_series(series):\n",
-    "    train_series = pd.read_parquet('../../data/cleaned/train_series.parquet', filters=[('series_id','=',series)])\n",
+    "    train_series = pd.read_parquet('../../data/cleaned/series.parquet', filters=[('series_id','=',series)])\n",
     "    train_events_filtered = train_events.query('series_id == @series')\n",
     "    true_events = train_events_filtered[train_events_filtered['step'].notna()].reset_index()\n",
     "    events_with_na = pd.concat([train_events_filtered])\n",
@@ -369,11 +369,15 @@
       "Step 266 of 269\n",
       "Step 267 of 269\n",
       "Step 268 of 269\n",
-      "Step 269 of 269\n"
+      "Step 269 of 269\n",
+      "CPU times: total: 37min 52s\n",
+      "Wall time: 21min 7s\n"
      ]
     }
    ],
    "source": [
+    "%%time\n",
+    "\n",
     "train_data = []\n",
     "\n",
     "total_len = train_events.series_id.nunique()\n",
@@ -420,6 +424,7 @@
        "      <th>timestamp</th>\n",
        "      <th>anglez</th>\n",
        "      <th>enmo</th>\n",
+       "      <th>num_series_id</th>\n",
        "      <th>awake</th>\n",
        "      <th>unknown</th>\n",
        "    </tr>\n",
@@ -433,6 +438,7 @@
        "      <td>2.6367</td>\n",
        "      <td>0.0217</td>\n",
        "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -442,6 +448,7 @@
        "      <td>2018-08-14T15:30:05-0400</td>\n",
        "      <td>2.6368</td>\n",
        "      <td>0.0215</td>\n",
+       "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
@@ -453,6 +460,7 @@
        "      <td>2.6370</td>\n",
        "      <td>0.0216</td>\n",
        "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -462,6 +470,7 @@
        "      <td>2018-08-14T15:30:15-0400</td>\n",
        "      <td>2.6368</td>\n",
        "      <td>0.0213</td>\n",
+       "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
@@ -473,6 +482,7 @@
        "      <td>2.6368</td>\n",
        "      <td>0.0215</td>\n",
        "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -480,19 +490,19 @@
        "</div>"
       ],
       "text/plain": [
-       "      series_id  step                 timestamp  anglez    enmo  awake  \\\n",
-       "0  038441c925bb     0  2018-08-14T15:30:00-0400  2.6367  0.0217      1   \n",
-       "1  038441c925bb     1  2018-08-14T15:30:05-0400  2.6368  0.0215      1   \n",
-       "2  038441c925bb     2  2018-08-14T15:30:10-0400  2.6370  0.0216      1   \n",
-       "3  038441c925bb     3  2018-08-14T15:30:15-0400  2.6368  0.0213      1   \n",
-       "4  038441c925bb     4  2018-08-14T15:30:20-0400  2.6368  0.0215      1   \n",
+       "      series_id  step                 timestamp  anglez    enmo  \\\n",
+       "0  038441c925bb     0  2018-08-14T15:30:00-0400  2.6367  0.0217   \n",
+       "1  038441c925bb     1  2018-08-14T15:30:05-0400  2.6368  0.0215   \n",
+       "2  038441c925bb     2  2018-08-14T15:30:10-0400  2.6370  0.0216   \n",
+       "3  038441c925bb     3  2018-08-14T15:30:15-0400  2.6368  0.0213   \n",
+       "4  038441c925bb     4  2018-08-14T15:30:20-0400  2.6368  0.0215   \n",
        "\n",
-       "   unknown  \n",
-       "0        0  \n",
-       "1        0  \n",
-       "2        0  \n",
-       "3        0  \n",
-       "4        0  "
+       "   num_series_id  awake  unknown  \n",
+       "0              1      1        0  \n",
+       "1              1      1        0  \n",
+       "2              1      1        0  \n",
+       "3              1      1        0  \n",
+       "4              1      1        0  "
       ]
      },
      "execution_count": 5,
@@ -519,7 +529,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train.to_parquet('../../data/processed/train.parquet')"
+    "train.to_parquet('../../data/processed/series.parquet')"
    ]
   }
  ],
