--- a/notebooks/data/data-normalization.ipynb
+++ b/notebooks/data/data-normalization.ipynb
@@ -38,8 +38,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_series = pd.read_parquet('../../data/processed/v2/train_series_split.parquet')\n",
-    "validation_series = pd.read_parquet('../../data/processed/v2/validation_series_split.parquet')"
+    "train_series = pd.read_parquet('../../data/processed/train_series_split.parquet')\n",
+    "validation_series = pd.read_parquet('../../data/processed/validation_series_split.parquet')"
    ]
   },
   {
@@ -98,7 +98,7 @@
     {
      "data": {
       "text/plain": [
-       "['../../data/processed/v2/scaler.gz']"
+       "['../../data/processed/scaler.gz']"
       ]
      },
      "execution_count": 6,
@@ -107,7 +107,7 @@
     }
    ],
    "source": [
-    "joblib.dump(scaler, '../../data/processed/v2/scaler.gz')"
+    "joblib.dump(scaler, '../../data/processed/scaler.gz')"
    ]
   },
   {
@@ -117,8 +117,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_series.to_parquet('../../data/processed/v2/train_series_split_normalized.parquet')\n",
-    "validation_series.to_parquet('../../data/processed/v2/validation_series_split_normalized.parquet')"
+    "train_series.to_parquet('../../data/processed/train_series_split_normalized.parquet')\n",
+    "validation_series.to_parquet('../../data/processed/validation_series_split_normalized.parquet')"
    ]
   }
  ],
