--- a/notebooks/data/train-test-split.ipynb
+++ b/notebooks/data/train-test-split.ipynb
@@ -47,8 +47,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "series = pd.read_parquet('../../data/processed/train.parquet')\n",
-    "events = pd.read_csv('../../data/cleaned/train_events.csv')"
+    "series = pd.read_parquet('../../data/processed/series.parquet')\n",
+    "events = pd.read_csv('../../data/cleaned/events.csv')"
    ]
   },
   {
@@ -158,8 +158,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_series.to_parquet('../../data/processed/v2/train_series_split.parquet')\n",
-    "train_events.to_csv('../../data/processed/v2/train_events_split.csv', index=False)"
+    "train_series.to_parquet('../../data/processed/train_series_split.parquet')\n",
+    "train_events.to_csv('../../data/processed/train_series_split.csv', index=False)"
    ]
   },
   {
@@ -169,8 +169,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "validation_series.to_parquet('../../data/processed/v2/validation_series_split.parquet')\n",
-    "validation_events.to_csv('../../data/processed/v2/validation_events_split.csv', index=False)"
+    "validation_series.to_parquet('../../data/processed/validation_series_split.parquet')\n",
+    "validation_events.to_csv('../../data/processed/validation_events_split.csv', index=False)"
    ]
   }
  ],
