--- a/notebooks/data/feature-engineering.ipynb
+++ b/notebooks/data/feature-engineering.ipynb
@@ -49,7 +49,7 @@
    },
    "outputs": [],
    "source": [
-    "train_series = pd.read_parquet('../../data/processed/train.parquet', columns=['series_id'])"
+    "train_series = pd.read_parquet('../../data/processed/series.parquet', columns=['series_id'])"
    ]
   },
   {
@@ -89,7 +89,7 @@
    "outputs": [],
    "source": [
     "def make_features_chunck(series_id, periods=NUM_STEPS):\n",
-    "    df = pd.read_parquet('../../data/processed/train.parquet', filters=[('series_id','=',series_id)])\n",
+    "    df = pd.read_parquet('../../data/processed/series.parquet', filters=[('series_id','=',series_id)])\n",
     "    \n",
     "    df[\"hour\"] = df['timestamp'].str[11:13]\n",
     "    \n",
@@ -146,14 +146,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|████████████████████████████████████████████████████████████████████████████████| 269/269 [21:32<00:00,  4.80s/it]\n"
+      "100%|████████████████████████████████████████████████████████████████████████████████| 269/269 [18:56<00:00,  4.22s/it]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Feature Engineering took 1748.421234846115 seconds\n"
+      "Feature Engineering took 1491.8568377494812 seconds\n"
      ]
     }
    ],
@@ -195,11 +195,12 @@
        "      <th>timestamp</th>\n",
        "      <th>anglez</th>\n",
        "      <th>enmo</th>\n",
+       "      <th>num_series_id</th>\n",
        "      <th>awake</th>\n",
        "      <th>unknown</th>\n",
        "      <th>hour</th>\n",
        "      <th>anglez_abs</th>\n",
-       "      <th>anglez_diff</th>\n",
+       "      <th>...</th>\n",
        "      <th>enmo_diff</th>\n",
        "      <th>anglez_x_enmo</th>\n",
        "      <th>anglez_rolling_mean</th>\n",
@@ -221,10 +222,11 @@
        "      <td>2.6367</td>\n",
        "      <td>0.0217</td>\n",
        "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>15</td>\n",
        "      <td>2.6367</td>\n",
-       "      <td>41.462601</td>\n",
+       "      <td>...</td>\n",
        "      <td>-0.0047</td>\n",
        "      <td>0.057216</td>\n",
        "      <td>7.573975</td>\n",
@@ -244,10 +246,11 @@
        "      <td>2.6368</td>\n",
        "      <td>0.0215</td>\n",
        "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>15</td>\n",
        "      <td>2.6368</td>\n",
-       "      <td>41.462601</td>\n",
+       "      <td>...</td>\n",
        "      <td>-0.0047</td>\n",
        "      <td>0.056691</td>\n",
        "      <td>7.573975</td>\n",
@@ -267,10 +270,11 @@
        "      <td>2.6370</td>\n",
        "      <td>0.0216</td>\n",
        "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>15</td>\n",
        "      <td>2.6370</td>\n",
-       "      <td>41.462601</td>\n",
+       "      <td>...</td>\n",
        "      <td>-0.0047</td>\n",
        "      <td>0.056959</td>\n",
        "      <td>7.573975</td>\n",
@@ -290,10 +294,11 @@
        "      <td>2.6368</td>\n",
        "      <td>0.0213</td>\n",
        "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>15</td>\n",
        "      <td>2.6368</td>\n",
-       "      <td>41.462601</td>\n",
+       "      <td>...</td>\n",
        "      <td>-0.0047</td>\n",
        "      <td>0.056164</td>\n",
        "      <td>7.573975</td>\n",
@@ -313,10 +318,11 @@
        "      <td>2.6368</td>\n",
        "      <td>0.0215</td>\n",
        "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>15</td>\n",
        "      <td>2.6368</td>\n",
-       "      <td>41.462601</td>\n",
+       "      <td>...</td>\n",
        "      <td>-0.0047</td>\n",
        "      <td>0.056691</td>\n",
        "      <td>7.573975</td>\n",
@@ -330,29 +336,30 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>5 rows × 21 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "      series_id  step                 timestamp  anglez    enmo  awake  \\\n",
-       "0  038441c925bb     0  2018-08-14T15:30:00-0400  2.6367  0.0217      1   \n",
-       "1  038441c925bb     1  2018-08-14T15:30:05-0400  2.6368  0.0215      1   \n",
-       "2  038441c925bb     2  2018-08-14T15:30:10-0400  2.6370  0.0216      1   \n",
-       "3  038441c925bb     3  2018-08-14T15:30:15-0400  2.6368  0.0213      1   \n",
-       "4  038441c925bb     4  2018-08-14T15:30:20-0400  2.6368  0.0215      1   \n",
+       "      series_id  step                 timestamp  anglez    enmo  \\\n",
+       "0  038441c925bb     0  2018-08-14T15:30:00-0400  2.6367  0.0217   \n",
+       "1  038441c925bb     1  2018-08-14T15:30:05-0400  2.6368  0.0215   \n",
+       "2  038441c925bb     2  2018-08-14T15:30:10-0400  2.6370  0.0216   \n",
+       "3  038441c925bb     3  2018-08-14T15:30:15-0400  2.6368  0.0213   \n",
+       "4  038441c925bb     4  2018-08-14T15:30:20-0400  2.6368  0.0215   \n",
        "\n",
-       "   unknown hour  anglez_abs  anglez_diff  enmo_diff  anglez_x_enmo  \\\n",
-       "0        0   15      2.6367    41.462601    -0.0047       0.057216   \n",
-       "1        0   15      2.6368    41.462601    -0.0047       0.056691   \n",
-       "2        0   15      2.6370    41.462601    -0.0047       0.056959   \n",
-       "3        0   15      2.6368    41.462601    -0.0047       0.056164   \n",
-       "4        0   15      2.6368    41.462601    -0.0047       0.056691   \n",
+       "   num_series_id  awake  unknown hour  anglez_abs  ...  enmo_diff  \\\n",
+       "0              1      1        0   15      2.6367  ...    -0.0047   \n",
+       "1              1      1        0   15      2.6368  ...    -0.0047   \n",
+       "2              1      1        0   15      2.6370  ...    -0.0047   \n",
+       "3              1      1        0   15      2.6368  ...    -0.0047   \n",
+       "4              1      1        0   15      2.6368  ...    -0.0047   \n",
        "\n",
-       "   anglez_rolling_mean  enmo_rolling_mean  anglez_rolling_max  \\\n",
-       "0             7.573975            0.02233             54.8498   \n",
-       "1             7.573975            0.02233             54.8498   \n",
-       "2             7.573975            0.02233             54.8498   \n",
-       "3             7.573975            0.02233             54.8498   \n",
-       "4             7.573975            0.02233             54.8498   \n",
+       "   anglez_x_enmo  anglez_rolling_mean  enmo_rolling_mean  anglez_rolling_max  \\\n",
+       "0       0.057216             7.573975            0.02233             54.8498   \n",
+       "1       0.056691             7.573975            0.02233             54.8498   \n",
+       "2       0.056959             7.573975            0.02233             54.8498   \n",
+       "3       0.056164             7.573975            0.02233             54.8498   \n",
+       "4       0.056691             7.573975            0.02233             54.8498   \n",
        "\n",
        "   enmo_rolling_max  anglez_rolling_min  enmo_rolling_min  anglez_rolling_std  \\\n",
        "0            0.0395              2.4129            0.0166           15.339381   \n",
@@ -366,7 +373,9 @@
        "1          0.004213  \n",
        "2          0.004213  \n",
        "3          0.004213  \n",
-       "4          0.004213  "
+       "4          0.004213  \n",
+       "\n",
+       "[5 rows x 21 columns]"
       ]
      },
      "execution_count": 7,
@@ -388,14 +397,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "22e9ec9f0edb7bf1",
    "metadata": {
     "is_executing": true
    },
    "outputs": [],
    "source": [
-    "train_with_features.to_parquet('../../data/processed/train_with_features.parquet')"
+    "train_with_features.to_parquet('../../data/processed/handcrafted-features/series_with_handcrafted_features.parquet')"
    ]
   }
  ],
