--- a/notebooks/data/feature-engineering-lags-transformer.ipynb
+++ b/notebooks/data/feature-engineering-lags-transformer.ipynb
@@ -28,6 +28,7 @@
     "from tqdm import tqdm\n",
     "\n",
     "import time\n",
+    "import torch\n",
     "import gc\n",
     "\n",
     "pd.set_option('display.max_columns', None)"
@@ -43,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 47,
    "id": "324a560c",
    "metadata": {
     "ExecuteTime": {
@@ -71,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 48,
    "id": "a775cf39",
    "metadata": {},
    "outputs": [],
@@ -83,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 49,
    "id": "3fa6384c",
    "metadata": {},
    "outputs": [
@@ -93,7 +94,7 @@
        "49"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -112,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 50,
    "id": "25844b7a",
    "metadata": {},
    "outputs": [],
@@ -121,12 +122,15 @@
     "file_path_prefix = \"../../data/processed/transformer/\" + folder\n",
     "\n",
     "def save_chunk(num_series_id, chunk):\n",
-    "    chunk.to_feather(file_path_prefix + str(num_series_id) + \".feather\")"
+    "    series_length, series_columns = chunk[FEATURES].values.shape\n",
+    "    X = torch.from_numpy(np.vstack(np.ravel(chunk[FEATURES].values))\n",
+    "                           .reshape(series_length, series_columns, 2)).to(torch.float32)\n",
+    "    torch.save(X, file_path_prefix + str(num_series_id) + \".pt\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 51,
    "id": "5f7819507cd29d98",
    "metadata": {
     "ExecuteTime": {
@@ -157,22 +161,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 52,
    "id": "16b52907",
    "metadata": {},
    "outputs": [],
    "source": [
     "def make_features(series):\n",
     "    overview_data = []\n",
+    "    abort = False\n",
     "\n",
     "    for num_series_id in tqdm(series.num_series_id.unique()):\n",
     "        chunk = make_features_chunk(num_series_id)\n",
     "        save_chunk(num_series_id, chunk)\n",
     "\n",
     "        overview_data.append(\n",
-    "            chunk[['num_series_id', 'step']].reset_index().rename(columns={'index':'series_index'}).copy()[['num_series_id', 'step', 'series_index']]\n",
+    "            chunk[['num_series_id', 'awake']].reset_index().rename(columns={'index':'series_index'}).copy()[['num_series_id', 'awake', 'series_index']]\n",
     "        )\n",
-    "        \n",
+    "\n",
     "        del chunk\n",
     "        gc.collect()\n",
     "    \n",
@@ -181,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 53,
    "id": "c0d067155defaebc",
    "metadata": {
     "ExecuteTime": {
@@ -195,14 +200,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████████| 54/54 [17:32<00:00, 19.49s/it]\n"
+      "100%|██████████████████████████████████████████████████████████████████████████████████| 54/54 [43:01<00:00, 47.81s/it]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Feature Engineering took 1053.1359159946442 seconds\n"
+      "Feature Engineering took 2582.5897183418274 seconds\n"
      ]
     }
    ],
@@ -222,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 54,
    "id": "9d108c48",
    "metadata": {},
    "outputs": [
@@ -248,7 +253,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>num_series_id</th>\n",
-       "      <th>step</th>\n",
+       "      <th>awake</th>\n",
        "      <th>series_index</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -256,7 +261,7 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>7</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -268,19 +273,19 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>7</td>\n",
-       "      <td>2</td>\n",
+       "      <td>1</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>7</td>\n",
-       "      <td>3</td>\n",
+       "      <td>1</td>\n",
        "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>7</td>\n",
-       "      <td>4</td>\n",
+       "      <td>1</td>\n",
        "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -292,31 +297,31 @@
        "    <tr>\n",
        "      <th>20009335</th>\n",
        "      <td>276</td>\n",
-       "      <td>620635</td>\n",
+       "      <td>1</td>\n",
        "      <td>620635</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>20009336</th>\n",
        "      <td>276</td>\n",
-       "      <td>620636</td>\n",
+       "      <td>1</td>\n",
        "      <td>620636</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>20009337</th>\n",
        "      <td>276</td>\n",
-       "      <td>620637</td>\n",
+       "      <td>1</td>\n",
        "      <td>620637</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>20009338</th>\n",
        "      <td>276</td>\n",
-       "      <td>620638</td>\n",
+       "      <td>1</td>\n",
        "      <td>620638</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>20009339</th>\n",
        "      <td>276</td>\n",
-       "      <td>620639</td>\n",
+       "      <td>1</td>\n",
        "      <td>620639</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -325,23 +330,23 @@
        "</div>"
       ],
       "text/plain": [
-       "          num_series_id    step  series_index\n",
-       "0                     7       0             0\n",
-       "1                     7       1             1\n",
-       "2                     7       2             2\n",
-       "3                     7       3             3\n",
-       "4                     7       4             4\n",
-       "...                 ...     ...           ...\n",
-       "20009335            276  620635        620635\n",
-       "20009336            276  620636        620636\n",
-       "20009337            276  620637        620637\n",
-       "20009338            276  620638        620638\n",
-       "20009339            276  620639        620639\n",
+       "          num_series_id  awake  series_index\n",
+       "0                     7      1             0\n",
+       "1                     7      1             1\n",
+       "2                     7      1             2\n",
+       "3                     7      1             3\n",
+       "4                     7      1             4\n",
+       "...                 ...    ...           ...\n",
+       "20009335            276      1        620635\n",
+       "20009336            276      1        620636\n",
+       "20009337            276      1        620637\n",
+       "20009338            276      1        620638\n",
+       "20009339            276      1        620639\n",
        "\n",
        "[20009340 rows x 3 columns]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -352,118 +357,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 55,
    "id": "095953db",
    "metadata": {},
    "outputs": [],
    "source": [
     "overview.to_parquet(file_path_prefix + \"overview.parquet\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 87,
-   "id": "c0cb1297",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "series7 = pd.read_feather(file_path_prefix + \"7.feather\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 90,
-   "id": "c14ff0d9",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor(1)"
-      ]
-     },
-     "execution_count": 90,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "torch.from_numpy(series7[LABEL].astype('int64').to_numpy()).squeeze(1)[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 98,
-   "id": "ecaefcdc",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tensor([[[ 1.0666],\n",
-      "         [-1.8279],\n",
-      "         [-0.4424],\n",
-      "         ...,\n",
-      "         [ 0.6216],\n",
-      "         [ 1.1704],\n",
-      "         [ 0.7218]],\n",
-      "\n",
-      "        [[-1.5844],\n",
-      "         [-0.7324],\n",
-      "         [-0.8466],\n",
-      "         ...,\n",
-      "         [ 1.4535],\n",
-      "         [ 0.0270],\n",
-      "         [ 1.3010]],\n",
-      "\n",
-      "        [[-0.6601],\n",
-      "         [-0.0892],\n",
-      "         [ 0.4895],\n",
-      "         ...,\n",
-      "         [-0.2421],\n",
-      "         [ 0.5774],\n",
-      "         [ 0.5033]],\n",
-      "\n",
-      "        ...,\n",
-      "\n",
-      "        [[-1.3609],\n",
-      "         [-0.2776],\n",
-      "         [ 0.2342],\n",
-      "         ...,\n",
-      "         [-0.1636],\n",
-      "         [ 0.2715],\n",
-      "         [-1.0235]],\n",
-      "\n",
-      "        [[ 0.8998],\n",
-      "         [ 1.0288],\n",
-      "         [ 0.7142],\n",
-      "         ...,\n",
-      "         [-0.2692],\n",
-      "         [-0.8795],\n",
-      "         [-0.5863]],\n",
-      "\n",
-      "        [[-2.7479],\n",
-      "         [ 1.3100],\n",
-      "         [-0.5185],\n",
-      "         ...,\n",
-      "         [ 0.5344],\n",
-      "         [-1.2897],\n",
-      "         [ 0.3658]]])\n",
-      "tensor([[ 1.0666, -1.8279, -0.4424,  ...,  0.6216,  1.1704,  0.7218],\n",
-      "        [-1.5844, -0.7324, -0.8466,  ...,  1.4535,  0.0270,  1.3010],\n",
-      "        [-0.6601, -0.0892,  0.4895,  ..., -0.2421,  0.5774,  0.5033],\n",
-      "        ...,\n",
-      "        [-1.3609, -0.2776,  0.2342,  ..., -0.1636,  0.2715, -1.0235],\n",
-      "        [ 0.8998,  1.0288,  0.7142,  ..., -0.2692, -0.8795, -0.5863],\n",
-      "        [-2.7479,  1.3100, -0.5185,  ...,  0.5344, -1.2897,  0.3658]])\n"
-     ]
-    }
-   ],
-   "source": [
-    "tensor = torch.randn(64, 49, 1)\n",
-    "print(tensor)\n",
-    "print(torch.squeeze(tensor, dim=2))"
    ]
   }
  ],
