error analysis for new mlp model

--- a/notebooks/data/data-normalization.ipynb
+++ b/notebooks/data/data-normalization.ipynb
@@ -98,7 +98,7 @@
     {
      "data": {
       "text/plain": [
-       "['../../data/processed/scaler.gz']"
+       "['../../data/processed/scaler.pkl']"
       ]
      },
      "execution_count": 6,
@@ -107,7 +107,7 @@
     }
    ],
    "source": [
-    "joblib.dump(scaler, '../../data/processed/scaler.gz')"
+    "joblib.dump(scaler, '../../data/processed/scaler.pkl')"
    ]
   },
   {
