--- a/notebooks/data/feature-engineering-lags-transformer.ipynb
+++ b/notebooks/data/feature-engineering-lags-transformer.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 29,
    "id": "324a560c",
    "metadata": {
     "ExecuteTime": {
@@ -54,7 +54,7 @@
    },
    "outputs": [],
    "source": [
-    "IS_TRAINING = False\n",
+    "IS_TRAINING = True\n",
     "if IS_TRAINING:\n",
     "    FILE = '../../data/processed/train_series_split_normalized.parquet'\n",
     "else:\n",
@@ -72,19 +72,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 30,
    "id": "a775cf39",
    "metadata": {},
    "outputs": [],
    "source": [
     "LAGS_FUTURE = [f\"t_lag_{i}\" for i in range(-1, -25, -1)]\n",
-    "LAGS_PAST = [f\"t_lag_{i}\" for i in range(1, 25)]\n",
-    "FEATURES = ['t_0', *LAGS_PAST, *LAGS_FUTURE]"
+    "LAGS_PAST = reversed([f\"t_lag_{i}\" for i in range(1, 25)])\n",
+    "FEATURES = [*LAGS_PAST, 't_0', *LAGS_FUTURE]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 31,
    "id": "3fa6384c",
    "metadata": {},
    "outputs": [
@@ -94,7 +94,7 @@
        "49"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 32,
    "id": "25844b7a",
    "metadata": {},
    "outputs": [],
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 33,
    "id": "5f7819507cd29d98",
    "metadata": {
     "ExecuteTime": {
@@ -161,14 +161,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 34,
    "id": "16b52907",
    "metadata": {},
    "outputs": [],
    "source": [
     "def make_features(series):\n",
     "    overview_data = []\n",
-    "    abort = False\n",
     "\n",
     "    for num_series_id in tqdm(series.num_series_id.unique()):\n",
     "        chunk = make_features_chunk(num_series_id)\n",
@@ -186,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 35,
    "id": "c0d067155defaebc",
    "metadata": {
     "ExecuteTime": {
@@ -200,14 +199,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████████| 54/54 [43:01<00:00, 47.81s/it]\n"
+      "100%|██████████████████████████████████████████████████████████████████████████████| 215/215 [3:08:09<00:00, 52.51s/it]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Feature Engineering took 2582.5897183418274 seconds\n"
+      "Feature Engineering took 11292.814343214035 seconds\n"
      ]
     }
    ],
@@ -227,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 36,
    "id": "9d108c48",
    "metadata": {},
    "outputs": [
@@ -260,31 +259,31 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>7</td>\n",
+       "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>7</td>\n",
+       "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>7</td>\n",
+       "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>7</td>\n",
+       "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>7</td>\n",
+       "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>4</td>\n",
        "    </tr>\n",
@@ -295,58 +294,58 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>20009335</th>\n",
-       "      <td>276</td>\n",
+       "      <th>87105775</th>\n",
+       "      <td>277</td>\n",
        "      <td>1</td>\n",
-       "      <td>620635</td>\n",
+       "      <td>592375</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>20009336</th>\n",
-       "      <td>276</td>\n",
+       "      <th>87105776</th>\n",
+       "      <td>277</td>\n",
        "      <td>1</td>\n",
-       "      <td>620636</td>\n",
+       "      <td>592376</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>20009337</th>\n",
-       "      <td>276</td>\n",
+       "      <th>87105777</th>\n",
+       "      <td>277</td>\n",
        "      <td>1</td>\n",
-       "      <td>620637</td>\n",
+       "      <td>592377</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>20009338</th>\n",
-       "      <td>276</td>\n",
+       "      <th>87105778</th>\n",
+       "      <td>277</td>\n",
        "      <td>1</td>\n",
-       "      <td>620638</td>\n",
+       "      <td>592378</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>20009339</th>\n",
-       "      <td>276</td>\n",
+       "      <th>87105779</th>\n",
+       "      <td>277</td>\n",
        "      <td>1</td>\n",
-       "      <td>620639</td>\n",
+       "      <td>592379</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>20009340 rows × 3 columns</p>\n",
+       "<p>87105780 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "          num_series_id  awake  series_index\n",
-       "0                     7      1             0\n",
-       "1                     7      1             1\n",
-       "2                     7      1             2\n",
-       "3                     7      1             3\n",
-       "4                     7      1             4\n",
+       "0                     1      1             0\n",
+       "1                     1      1             1\n",
+       "2                     1      1             2\n",
+       "3                     1      1             3\n",
+       "4                     1      1             4\n",
        "...                 ...    ...           ...\n",
-       "20009335            276      1        620635\n",
-       "20009336            276      1        620636\n",
-       "20009337            276      1        620637\n",
-       "20009338            276      1        620638\n",
-       "20009339            276      1        620639\n",
+       "87105775            277      1        592375\n",
+       "87105776            277      1        592376\n",
+       "87105777            277      1        592377\n",
+       "87105778            277      1        592378\n",
+       "87105779            277      1        592379\n",
        "\n",
-       "[20009340 rows x 3 columns]"
+       "[87105780 rows x 3 columns]"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -357,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 37,
    "id": "095953db",
    "metadata": {},
    "outputs": [],
