--- a/notebooks/data/feature-engineering-lags.ipynb
+++ b/notebooks/data/feature-engineering-lags.ipynb
@@ -822,9 +822,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ai-challenge",
+   "display_name": "aich",
    "language": "python",
-   "name": "ai-challenge"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -836,7 +836,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.8.18"
   }
  },
  "nbformat": 4,
