improved data cleaning and unknown flagging

--- a/notebooks/data/data-cleaning.ipynb
+++ b/notebooks/data/data-cleaning.ipynb
@@ -85,10 +85,11 @@
     "\n",
     "    if plot_series:\n",
     "        fig, ax = plt.subplots(figsize=(20, 3))\n",
-    "        sns.lineplot(data=train_series, x=\"step\", y=\"anglez\", linewidth = 0.5)\n",
+    "        sns.lineplot(data=series_to_clean, x=\"step\", y=\"anglez\", linewidth = 0.5)\n",
     "        plt.show()\n",
     "\n",
     "    while True:\n",
+    "        comparing_sequence = series_to_clean[multiplicator*sequence_length:(multiplicator+1)*sequence_length]\n",
     "        # Get 24 Hours (s1) and the next 24 Hours (s2)\n",
     "        s1 = series_to_clean[multiplicator*sequence_length:(multiplicator+1)*sequence_length]['anglez'].reset_index(drop=True)\n",
     "        s2 = series_to_clean[(multiplicator+1)*sequence_length:(multiplicator+2)*sequence_length]['anglez'].reset_index(drop=True)\n",
@@ -104,6 +105,22 @@
     "        if s1.equals(s2):\n",
     "            indices_to_remove.append(((multiplicator+1)*sequence_length, (multiplicator+2)*sequence_length))\n",
     "\n",
+    "        if not s1[(s1 > 50) | (s1 < -50)].any():\n",
+    "            indices_to_remove.append(((multiplicator)*sequence_length, (multiplicator+1)*sequence_length))\n",
+    "\n",
+    "        # check for any repeating 24h in whole series\n",
+    "        for current_sequence_index in range(0, len(series_to_clean), sequence_length):\n",
+    "            end_sequence_index = current_sequence_index + sequence_length\n",
+    "            if len(series_to_clean) < end_sequence_index:\n",
+    "                end_sequence_index = len(series_to_clean) - 1\n",
+    "            sequence = series_to_clean[current_sequence_index:end_sequence_index]\n",
+    "            sequence_angle = sequence['anglez'].reset_index(drop=True)\n",
+    "            comparing_sequence_angle = comparing_sequence['anglez'].reset_index(drop=True)\n",
+    "            if sequence_angle.equals(comparing_sequence_angle):\n",
+    "                sequence_step = sequence['step'].reset_index(drop=True)\n",
+    "                comparing_sequence_step = comparing_sequence['step'].reset_index(drop=True)\n",
+    "                if not sequence_step.equals(comparing_sequence_step):\n",
+    "                    indices_to_remove.append((current_sequence_index, current_sequence_index + sequence_length))\n",
     "        multiplicator += 1\n",
     "\n",
     "\n",
@@ -550,7 +567,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.18"
   }
  },
  "nbformat": 4,
